; ModuleID = '/home/carl/AnghaBench/glfw/tests/extr_icon.c_key_callback.c'
source_filename = "/home/carl/AnghaBench/glfw/tests/extr_icon.c_key_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLFW_PRESS = common dso_local global i32 0, align 4
@GLFW_TRUE = common dso_local global i32 0, align 4
@cur_icon_color = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32)* @key_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @key_callback(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %9, align 4
  %12 = load i32, i32* @GLFW_PRESS, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %5
  br label %31

15:                                               ; preds = %5
  %16 = load i32, i32* %7, align 4
  switch i32 %16, label %31 [
    i32 130, label %17
    i32 129, label %21
    i32 128, label %28
  ]

17:                                               ; preds = %15
  %18 = load i32*, i32** %6, align 8
  %19 = load i32, i32* @GLFW_TRUE, align 4
  %20 = call i32 @glfwSetWindowShouldClose(i32* %18, i32 %19)
  br label %31

21:                                               ; preds = %15
  %22 = load i32, i32* @cur_icon_color, align 4
  %23 = add nsw i32 %22, 1
  %24 = srem i32 %23, 5
  store i32 %24, i32* @cur_icon_color, align 4
  %25 = load i32*, i32** %6, align 8
  %26 = load i32, i32* @cur_icon_color, align 4
  %27 = call i32 @set_icon(i32* %25, i32 %26)
  br label %31

28:                                               ; preds = %15
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @glfwSetWindowIcon(i32* %29, i32 0, i32* null)
  br label %31

31:                                               ; preds = %14, %15, %28, %21, %17
  ret void
}

declare dso_local i32 @glfwSetWindowShouldClose(i32*, i32) #1

declare dso_local i32 @set_icon(i32*, i32) #1

declare dso_local i32 @glfwSetWindowIcon(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
